[EDELIVERY-2314] - fix the error handling in the message ack and monitoring service
