# Domibus-MSH-ext-services-delegate/src/main/java/eu/domibus/ext/rest/MessageAcknowledgementResource.java
@@ -6,6 +6,7 @@ import eu.domibus.ext.services.MessageAcknowledgeService;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.Authorization;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -21,32 +22,38 @@ public class MessageAcknowledgementResource {
     @Autowired
     MessageAcknowledgeService messageAcknowledgeService;
 
+    @ResponseStatus(value = HttpStatus.INTERNAL_SERVER_ERROR)
+    @ExceptionHandler({Exception.class})
+    public ErrorRO handleException(Exception ex) {
+        return new ErrorRO(ex.getMessage());
+    }
+
     /**
      * Acknowledges that a message has been delivered to the backend
      *
-     * @param messageAcknowledgementDTO the details of the message delivered acknowledgement to be created
+     * @param acknowledgementRequestDTO the details of the message delivered acknowledgement to be created
      * @return The newly created message acknowledgement
      * @throws MessageAcknowledgeException Raised in case an exception occurs while trying to register an acknowledgment
      */
     @ApiOperation(value = "Create a message delivered acknowledgement", notes = "Acknowledges that a message has been delivered to the backend",
             authorizations = @Authorization(value = "basicAuth"), tags = "acknowledgement")
     @RequestMapping(path = "/delivered", method = RequestMethod.POST)
-    public MessageAcknowledgementDTO acknowledgeMessageDelivered(@RequestBody MessageAcknowledgementDTO messageAcknowledgementDTO) throws MessageAcknowledgeException {
-        return messageAcknowledgeService.acknowledgeMessageDelivered(messageAcknowledgementDTO.getMessageId(), messageAcknowledgementDTO.getAcknowledgeDate(), messageAcknowledgementDTO.getProperties());
+    public MessageAcknowledgementDTO acknowledgeMessageDelivered(@RequestBody MessageAcknowledgementRequestDTO acknowledgementRequestDTO) throws MessageAcknowledgeException {
+        return messageAcknowledgeService.acknowledgeMessageDelivered(acknowledgementRequestDTO.getMessageId(), acknowledgementRequestDTO.getAcknowledgeDate(), acknowledgementRequestDTO.getProperties());
     }
 
     /**
      * Acknowledges that a message has been processed by the backend
      *
-     * @param messageAcknowledgementDTO the details of the message delivered acknowledgement to be created
+     * @param acknowledgementRequestDTO the details of the message delivered acknowledgement to be created
      * @return The newly created message acknowledgement
      * @throws MessageAcknowledgeException Raised in case an exception occurs while trying to register an acknowledgment
      */
     @ApiOperation(value = "Create a message processed acknowledgement", notes = "Acknowledges that a message has been processed by the backend",
             authorizations = @Authorization(value = "basicAuth"), tags = "acknowledgement")
     @RequestMapping(path = "/processed", method = RequestMethod.POST)
-    public MessageAcknowledgementDTO acknowledgeMessageProcessed(@RequestBody MessageAcknowledgementDTO messageAcknowledgementDTO) throws MessageAcknowledgeException {
-        return messageAcknowledgeService.acknowledgeMessageProcessed(messageAcknowledgementDTO.getMessageId(), messageAcknowledgementDTO.getAcknowledgeDate(), messageAcknowledgementDTO.getProperties());
+    public MessageAcknowledgementDTO acknowledgeMessageProcessed(@RequestBody MessageAcknowledgementRequestDTO acknowledgementRequestDTO) throws MessageAcknowledgeException {
+        return messageAcknowledgeService.acknowledgeMessageProcessed(acknowledgementRequestDTO.getMessageId(), acknowledgementRequestDTO.getAcknowledgeDate(), acknowledgementRequestDTO.getProperties());
     }
 
     /**
